--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,3 +3,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
 Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Headers "*"
